--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </script>
     <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
-    <meta property="og:image" content="https://slovo.expert/digitalwoman/img/NewAboutDescriptionImage.png" />
+    <meta property="og:image" content="img/mcBackground.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="msapplication-TileColor" content="#fff8af">
     <meta name="theme-color" content="#fff8af">
